--- a/referências.html
+++ b/referências.html
@@ -410,6 +410,11 @@ Education and Outreach</em> 3.4, pp. 491-494. URL:
 “Systematics Agenda 2000: an historical perspective”. In: <em>Biodiversity
 &amp; Conservation</em> 4.5, pp. 455-462. URL:
 <a href="https://doi.org/10.1007/BF00056336">https://doi.org/10.1007/BF00056336</a>.</p>
+<p><a name=bib-Felsenstein1981></a><a href="#cite-Felsenstein1981">Felsenstein,
+J.</a> (1981). “Evolutionary trees from DNA
+sequences: A maximum likelihood approach”. In: <em>Journal of Molecular
+Evolution</em> 17.6, pp. 368-376. URL:
+<a href="https://doi.org/10.1007/bf01734359">https://doi.org/10.1007/bf01734359</a>.</p>
 <p><a name=bib-Gastauer2017></a><a href="#cite-Gastauer2017">Gastauer, M. and J. A. A. M.
 Neto</a> (2017). “Updated angiosperm family tree for
 analyzing phylogenetic diversity and community structure”. In: <em>Acta
@@ -424,6 +429,11 @@ Biotechnology</em> 13.2, pp. 137-152. URL:
 user-friendly biological sequence alignment editor and analysis program
 for Windows 95/98/NT”. In: <em>Nucleic Acids Symposium Series</em> 41, pp.
 95-98.</p>
+<p><a name=bib-Holland2013></a><a href="#cite-Holland2013">Holland, B. R.</a> (2013).
+“The Rise of Statistical Phylogenetics”. In: <em>Australian
+&amp;amp<span class="math inline">\(\mathsemicolon\)</span> New Zealand Journal of Statistics</em> 55.3, pp.
+205-220. URL:
+<a href="https://doi.org/10.1111/anzs.12035">https://doi.org/10.1111/anzs.12035</a>.</p>
 <p><a name=bib-Huelsenbeck></a><a href="#cite-Huelsenbeck">Huelsenbeck, J. P. and F.
 Ronquist</a> (2001). “MRBAYES: Bayesian inference of
 phylogenetic trees”. In: <em>Bioinformatics</em> 17.8, pp. 754-755. URL:
@@ -471,11 +481,24 @@ In: <em>Applied Bioinformatics</em> 4.1, pp. 65-69. URL:
 “Darwin-Henning Classification: A Reply to Ernst Mayr”. In: <em>Systematic
 Biology</em> 23.3, pp. 452-458. URL:
 <a href="https://doi.org/10.1093/sysbio/23.3.452">https://doi.org/10.1093/sysbio/23.3.452</a>.</p>
+<p><a name=bib-Patterson1982></a><a href="#cite-Patterson1982">Patterson, C.</a>
+(1982). “Morphological characters and homology”. In: <em>Problems of
+Phylogenetic Reconstruction</em>. Ed. by K. oysey and A. Friday. New York,
+NY: Academic Press. Chap. 1, pp. 21-74.</p>
 <p><a name=bib-Piel></a><a href="#cite-Piel">Piel, W. H., M. J. Sanderson, and M. J.
 Donoghue</a> (2003). “The small-world dynamics of tree
 networks and data mining in phyloinformatics”. In: <em>Bioinformatics</em>
 19.9, pp. 1162-1168. URL:
 <a href="https://doi.org/10.1093/bioinformatics/btg131">https://doi.org/10.1093/bioinformatics/btg131</a>.</p>
+<p><a name=bib-Pinna1991></a><a href="#cite-Pinna1991">Pinna, M. C. C.</a> (1991).
+“CONCEPTS AND TESTS OF HOMOLOGY IN THE CLADISTIC PARADIGM”. In:
+<em>Cladistics</em> 7.4, pp. 367-394. URL:
+<a href="https://doi.org/10.1111/j.1096-0031.1991.tb00045.x">https://doi.org/10.1111/j.1096-0031.1991.tb00045.x</a>.</p>
+<p><a name=bib-Posada2021></a><a href="#cite-Posada2021">Posada, D. and K. A.
+Crandall</a> (2021). “Felsenstein Phylogenetic
+Likelihood”. In: <em>Journal of Molecular Evolution</em> 89.3, pp. 134-145.
+URL:
+<a href="https://doi.org/10.1007/s00239-020-09982-w">https://doi.org/10.1007/s00239-020-09982-w</a>.</p>
 <p><a name=bib-ePING></a><a href="#cite-ePING">Programa de Governo Eletrônico
 Brasileiro</a> (2022). <em>PadrÃµes de Interoperabilidade de
 Governo EletrÃ´nico - ePING - VersÃ£o 2018</em>. [Online; accessed
@@ -619,6 +642,20 @@ gitbook.start({
 });
 </script>
 
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    var src = "true";
+    if (src === "" || src === "true") src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/latest.js?config=TeX-MML-AM_CHTML";
+    if (location.protocol !== "file:")
+      if (/^https?:/.test(src))
+        src = src.replace(/^https?:/, '');
+    script.src = src;
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
 </body>
 
 </html>
