--- a/referências.html
+++ b/referências.html
@@ -388,6 +388,10 @@ name=bib-TrendsandPriorities></a><a href="#cite-TrendsandPriorities">Anônimo</a
 (1974). “Trends, Priorities, and Needs in Systematic and Evolutionary
 Biology”. In: <em>Systematic Biology</em> 23.3, pp. 416-439. URL:
 <a href="https://doi.org/10.1093/sysbio/23.3.416">https://doi.org/10.1093/sysbio/23.3.416</a>.</p>
+<p><a name=bib-Brower2012></a><a href="#cite-Brower2012">Brower, A. V. and M. C. de
+Pinna</a> (2012). “Homology and errors”. In:
+<em>Cladistics</em> 28.5, pp. 529-538. URL:
+<a href="https://doi.org/10.1111/j.1096-0031.2012.00398.x">https://doi.org/10.1111/j.1096-0031.2012.00398.x</a>.</p>
 <p><a name=bib-Cornish-Bowden></a><a href="#cite-Cornish-Bowden">Cornish-Bowden,
 A.</a> (1985). “Nomenclature for incompletely
 specified bases in nucleic acid sequences: recommendations 1984”. In:
@@ -483,7 +487,7 @@ Biology</em> 23.3, pp. 452-458. URL:
 <a href="https://doi.org/10.1093/sysbio/23.3.452">https://doi.org/10.1093/sysbio/23.3.452</a>.</p>
 <p><a name=bib-Patterson1982></a><a href="#cite-Patterson1982">Patterson, C.</a>
 (1982). “Morphological characters and homology”. In: <em>Problems of
-Phylogenetic Reconstruction</em>. Ed. by K. oysey and A. Friday. New York,
+Phylogenetic Reconstruction</em>. Ed. by K. Joysey and A. Friday. New York,
 NY: Academic Press. Chap. 1, pp. 21-74.</p>
 <p><a name=bib-Piel></a><a href="#cite-Piel">Piel, W. H., M. J. Sanderson, and M. J.
 Donoghue</a> (2003). “The small-world dynamics of tree
@@ -491,7 +495,7 @@ networks and data mining in phyloinformatics”. In: <em>Bioinformatics</em>
 19.9, pp. 1162-1168. URL:
 <a href="https://doi.org/10.1093/bioinformatics/btg131">https://doi.org/10.1093/bioinformatics/btg131</a>.</p>
 <p><a name=bib-Pinna1991></a><a href="#cite-Pinna1991">Pinna, M. C. C.</a> (1991).
-“CONCEPTS AND TESTS OF HOMOLOGY IN THE CLADISTIC PARADIGM”. In:
+“Concepts and tests of homology in the cladistic paradigm”. In:
 <em>Cladistics</em> 7.4, pp. 367-394. URL:
 <a href="https://doi.org/10.1111/j.1096-0031.1991.tb00045.x">https://doi.org/10.1111/j.1096-0031.1991.tb00045.x</a>.</p>
 <p><a name=bib-Posada2021></a><a href="#cite-Posada2021">Posada, D. and K. A.
