--- a/edição-final-de-árvore.html
+++ b/edição-final-de-árvore.html
@@ -29,7 +29,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="softwares_filogenia.html"/>
+<link rel="prev" href="softwares-para-análises-filogenéticas.html"/>
 <link rel="next" href="árvores-filogenéticas-das-plantas.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -239,20 +239,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
-<li class="chapter" data-level="11" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
+<li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
 <ul>
-<li class="chapter" data-level="11.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
-<li class="chapter" data-level="11.2" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
+<li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
+<li class="chapter" data-level="11.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
 <ul>
-<li class="chapter" data-level="11.2.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
+<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="11.3" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
+<li class="chapter" data-level="11.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
+<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="11.4" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
+<li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
-<li class="chapter" data-level="11.4.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
+<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
@@ -393,7 +393,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="softwares_filogenia.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="softwares-para-análises-filogenéticas.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="árvores-filogenéticas-das-plantas.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
