--- a/referências.html
+++ b/referências.html
@@ -239,20 +239,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
-<li class="chapter" data-level="11" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
+<li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
 <ul>
-<li class="chapter" data-level="11.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
-<li class="chapter" data-level="11.2" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
+<li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
+<li class="chapter" data-level="11.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
 <ul>
-<li class="chapter" data-level="11.2.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
+<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="11.3" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
+<li class="chapter" data-level="11.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
+<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="11.4" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
+<li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
-<li class="chapter" data-level="11.4.1" data-path="softwares_filogenia.html"><a href="softwares_filogenia.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
+<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
@@ -558,6 +558,10 @@ contributors</a> (2022e).
 <em>Interoperabilidade semÃ¢ntica - Wikipedia,The Free Encyclopedia</em>.
 [Online; accessed 12-September-2022]. URL:
 <a href="https://pt.m.wikipedia.org/wiki/Interoperabilidade_sem%C3%A2ntica">https://pt.m.wikipedia.org/wiki/Interoperabilidade_sem%C3%A2ntica</a>.</p>
+<p><a name=bib-wikiRussell></a><a href="#cite-wikiRussell">Wikipedia contributors</a>
+(2022k). <em>Bertrand Russell - Wikipedia,The Free Encyclopedia</em>. [Online;
+accessed 23-September-2022]. URL:
+<a href="https://pt.wikipedia.org/wiki/Bertrand_Russell">https://pt.wikipedia.org/wiki/Bertrand_Russell</a>.</p>
 <p><a name=bib-wikiBioinformatics></a><a href="#cite-wikiBioinformatics">Wikipedia
 contributors</a> (2022a). <em>Bioinformatics -
 Wikipedia,The Free Encyclopedia</em>. [Online; accessed 10-September-2022].
@@ -572,6 +576,10 @@ URL:
 <em>Gene Ontology - Wikipedia,The Free Encyclopedia</em>. [Online; accessed
 11-September-2022]. URL:
 <a href="https://en.wikipedia.org/wiki/Gene_Ontology">https://en.wikipedia.org/wiki/Gene_Ontology</a>.</p>
+<p><a name=bib-wikiFrege></a><a href="#cite-wikiFrege">Wikipedia contributors</a>
+(2022j). <em>Gottlob Frege - Wikipedia,The Free Encyclopedia</em>. [Online;
+accessed 23-September-2022]. URL:
+<a href="https://pt.wikipedia.org/wiki/Gottlob_Frege">https://pt.wikipedia.org/wiki/Gottlob_Frege</a>.</p>
 <p><a name=bib-wikiTim></a><a href="#cite-wikiTim">Wikipedia contributors</a>
 (2022b). <em>Tim Berners-Lee - Wikipedia,The Free Encyclopedia</em>. [Online;
 accessed 11-September-2022]. URL:
