--- a/prêambulo.html
+++ b/prêambulo.html
@@ -238,7 +238,16 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
+<li class="chapter" data-level="10" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html"><i class="fa fa-check"></i><b>10</b> Modelos de evolução de sequências</a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#as-6-substituições"><i class="fa fa-check"></i><b>10.1</b> As 6 substituições</a>
+<ul>
+<li class="chapter" data-level="10.1.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-jukescantor-jc-1969"><i class="fa fa-check"></i><b>10.1.1</b> Modelo Jukes/Cantor (JC) 1969</a></li>
+<li class="chapter" data-level="10.1.2" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-kimura-k80-1980"><i class="fa fa-check"></i><b>10.1.2</b> Modelo Kimura (K80) 1980</a></li>
+<li class="chapter" data-level="10.1.3" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-hasegawa-kishino-yano-hky-1985"><i class="fa fa-check"></i><b>10.1.3</b> Modelo Hasegawa-Kishino-Yano (HKY) 1985</a></li>
+<li class="chapter" data-level="10.1.4" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-general-time-reversible-hky-1986"><i class="fa fa-check"></i><b>10.1.4</b> Modelo General Time Reversible (HKY) 1986</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
 <ul>
 <li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
@@ -253,18 +262,14 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
 <li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-1-1"><i class="fa fa-check"></i><b>11.4.1</b> Prática 1</a></li>
-<li class="chapter" data-level="11.4.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-de-evolução-de-sequências"><i class="fa fa-check"></i><b>11.4.2</b> Modelo de evolução de sequências</a>
+<li class="chapter" data-level="11.4.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-2-modelo-de-substituição"><i class="fa fa-check"></i><b>11.4.2</b> Prática 2: Modelo de substituição</a></li>
+<li class="chapter" data-level="11.4.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-3-gerando-o-output"><i class="fa fa-check"></i><b>11.4.3</b> Prática 3: Gerando o output</a></li>
+</ul></li>
+<li class="chapter" data-level="11.5" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#softwares-para-seleção-de-modelos-evolutivos"><i class="fa fa-check"></i><b>11.5</b> Softwares para seleção de modelos evolutivos</a></li>
+<li class="chapter" data-level="11.6" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#raxmlgui-2.0-jmodeltest-2"><i class="fa fa-check"></i><b>11.6</b> raxmlGUI 2.0 + jModelTest 2</a>
 <ul>
-<li class="chapter" data-level="11.4.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#as-6-substituições"><i class="fa fa-check"></i><b>11.4.2.1</b> As 6 substituições</a></li>
-<li class="chapter" data-level="11.4.2.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-jukescantor-jc-1969"><i class="fa fa-check"></i><b>11.4.2.2</b> Modelo Jukes/Cantor (JC) 1969</a></li>
-<li class="chapter" data-level="11.4.2.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-kimura-k80-1980"><i class="fa fa-check"></i><b>11.4.2.3</b> Modelo Kimura (K80) 1980</a></li>
-<li class="chapter" data-level="11.4.2.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-hasegawa-kishino-yano-hky-1985"><i class="fa fa-check"></i><b>11.4.2.4</b> Modelo Hasegawa-Kishino-Yano (HKY) 1985</a></li>
-<li class="chapter" data-level="11.4.2.5" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-general-time-reversible-hky-1986"><i class="fa fa-check"></i><b>11.4.2.5</b> Modelo General Time Reversible (HKY) 1986</a></li>
-<li class="chapter" data-level="11.4.2.6" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-2-modelo-de-substituição"><i class="fa fa-check"></i><b>11.4.2.6</b> Prática 2: Modelo de substituição</a></li>
-<li class="chapter" data-level="11.4.2.7" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-3-gerando-o-output"><i class="fa fa-check"></i><b>11.4.2.7</b> Prática 3: Gerando o output</a></li>
+<li class="chapter" data-level="11.6.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#partitionfinder"><i class="fa fa-check"></i><b>11.6.1</b> PartitionFinder</a></li>
 </ul></li>
-</ul></li>
-<li class="chapter" data-level="11.5" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#raxmlgui-2.0-jmodeltest-2"><i class="fa fa-check"></i><b>11.5</b> raxmlGUI 2.0 + jModelTest 2</a></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
 <ul>
@@ -395,7 +400,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Introdução à Filoinformática (<em>in development</em>)</h1>
 <p class="author"><em>Lucas S.B. Jordão</em></p>
-<p class="date"><em>26/10/2022</em></p>
+<p class="date"><em>27/10/2022</em></p>
 </div>
 <div id="prêambulo" class="section level1 unnumbered hasAnchor">
 <h1>Prêambulo<a href="prêambulo.html#prêambulo" class="anchor-section" aria-label="Anchor link to header"></a></h1>
