--- a/softwares-para-análises-filogenéticas.html
+++ b/softwares-para-análises-filogenéticas.html
@@ -29,7 +29,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="seleção-de-modelos-das-partições.html"/>
+<link rel="prev" href="modelos-de-evolução-de-sequências.html"/>
 <link rel="next" href="edição-final-de-árvore.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -238,7 +238,16 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
-<li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
+<li class="chapter" data-level="10" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html"><i class="fa fa-check"></i><b>10</b> Modelos de evolução de sequências</a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#as-6-substituições"><i class="fa fa-check"></i><b>10.1</b> As 6 substituições</a>
+<ul>
+<li class="chapter" data-level="10.1.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-jukescantor-jc-1969"><i class="fa fa-check"></i><b>10.1.1</b> Modelo Jukes/Cantor (JC) 1969</a></li>
+<li class="chapter" data-level="10.1.2" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-kimura-k80-1980"><i class="fa fa-check"></i><b>10.1.2</b> Modelo Kimura (K80) 1980</a></li>
+<li class="chapter" data-level="10.1.3" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-hasegawa-kishino-yano-hky-1985"><i class="fa fa-check"></i><b>10.1.3</b> Modelo Hasegawa-Kishino-Yano (HKY) 1985</a></li>
+<li class="chapter" data-level="10.1.4" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-general-time-reversible-hky-1986"><i class="fa fa-check"></i><b>10.1.4</b> Modelo General Time Reversible (HKY) 1986</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
 <ul>
 <li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
@@ -253,18 +262,14 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
 <li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-1-1"><i class="fa fa-check"></i><b>11.4.1</b> Prática 1</a></li>
-<li class="chapter" data-level="11.4.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-de-evolução-de-sequências"><i class="fa fa-check"></i><b>11.4.2</b> Modelo de evolução de sequências</a>
+<li class="chapter" data-level="11.4.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-2-modelo-de-substituição"><i class="fa fa-check"></i><b>11.4.2</b> Prática 2: Modelo de substituição</a></li>
+<li class="chapter" data-level="11.4.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-3-gerando-o-output"><i class="fa fa-check"></i><b>11.4.3</b> Prática 3: Gerando o output</a></li>
+</ul></li>
+<li class="chapter" data-level="11.5" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#softwares-para-seleção-de-modelos-evolutivos"><i class="fa fa-check"></i><b>11.5</b> Softwares para seleção de modelos evolutivos</a></li>
+<li class="chapter" data-level="11.6" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#raxmlgui-2.0-jmodeltest-2"><i class="fa fa-check"></i><b>11.6</b> raxmlGUI 2.0 + jModelTest 2</a>
 <ul>
-<li class="chapter" data-level="11.4.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#as-6-substituições"><i class="fa fa-check"></i><b>11.4.2.1</b> As 6 substituições</a></li>
-<li class="chapter" data-level="11.4.2.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-jukescantor-jc-1969"><i class="fa fa-check"></i><b>11.4.2.2</b> Modelo Jukes/Cantor (JC) 1969</a></li>
-<li class="chapter" data-level="11.4.2.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-kimura-k80-1980"><i class="fa fa-check"></i><b>11.4.2.3</b> Modelo Kimura (K80) 1980</a></li>
-<li class="chapter" data-level="11.4.2.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-hasegawa-kishino-yano-hky-1985"><i class="fa fa-check"></i><b>11.4.2.4</b> Modelo Hasegawa-Kishino-Yano (HKY) 1985</a></li>
-<li class="chapter" data-level="11.4.2.5" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#modelo-general-time-reversible-hky-1986"><i class="fa fa-check"></i><b>11.4.2.5</b> Modelo General Time Reversible (HKY) 1986</a></li>
-<li class="chapter" data-level="11.4.2.6" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-2-modelo-de-substituição"><i class="fa fa-check"></i><b>11.4.2.6</b> Prática 2: Modelo de substituição</a></li>
-<li class="chapter" data-level="11.4.2.7" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-3-gerando-o-output"><i class="fa fa-check"></i><b>11.4.2.7</b> Prática 3: Gerando o output</a></li>
+<li class="chapter" data-level="11.6.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#partitionfinder"><i class="fa fa-check"></i><b>11.6.1</b> PartitionFinder</a></li>
 </ul></li>
-</ul></li>
-<li class="chapter" data-level="11.5" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#raxmlgui-2.0-jmodeltest-2"><i class="fa fa-check"></i><b>11.5</b> raxmlGUI 2.0 + jModelTest 2</a></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
 <ul>
@@ -637,87 +642,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </div></li>
 </ul>
 </div>
-<div id="modelo-de-evolução-de-sequências" class="section level3 hasAnchor" number="11.4.2">
-<h3><span class="header-section-number">11.4.2</span> Modelo de evolução de sequências<a href="softwares-para-análises-filogenéticas.html#modelo-de-evolução-de-sequências" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<ul>
-<li><p>Para especificação do modelo evolutivo, use o comando <code>lset</code></p></li>
-<li><p>Os parâmetros de modelo mais utilizads são:</p>
-<ol style="list-style-type: decimal">
-<li>número de tipos de substituição</li>
-</ol>
-<ul>
-<li><strong>1</strong> = Jukes-Cantor</li>
-<li><strong>2</strong> = HKY</li>
-<li><strong>6</strong> = GTR</li>
-</ul>
-<ol start="2" style="list-style-type: decimal">
-<li>modelo de variação de taxa entre sítios (<em>sites</em>)</li>
-</ol>
-<ul>
-<li><strong>I</strong> = Taxas de sítios invariáveis</li>
-<li><strong>G</strong> = Taxas de distribuição gama entre os sítios</li>
-<li><strong>I+G</strong> = Combinação</li>
-</ul></li>
-</ul>
-<div id="as-6-substituições" class="section level4 hasAnchor" number="11.4.2.1">
-<h4><span class="header-section-number">11.4.2.1</span> As 6 substituições<a href="softwares-para-análises-filogenéticas.html#as-6-substituições" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><img src="images/six_subst.png" /></p>
-<ul>
-<li>Substituições do tipo transição são mais frequentes que transversões.
-<ul>
-<li>Transição:
-<ul>
-<li>Entre purinas: adenina (A) e guanina (G);</li>
-<li>Entre pirimidinas: citosina (C) e timina (T).</li>
-</ul></li>
-<li>Transversões:
-<ul>
-<li>Entre purinas e pirimidinas.</li>
-</ul></li>
-</ul></li>
-<li>Ademais, as <strong>mutações silenciosas</strong> são mais frequentes do que:
-<ul>
-<li>Mutações de sentido errado (<em>missense</em>) ou não sinônimas;
-<ul>
-<li>Resulta na substituição de um aminoácido por outro.</li>
-</ul></li>
-<li>Mutações sem sentido (<em>nonsense</em>).
-<ul>
-<li>Ocorre um substituição de um par de nucleotídeos dentro de uma região codificante de proteína que muda um códon para um aminoácido em um códon de término.</li>
-</ul></li>
-</ul></li>
-</ul>
-</div>
-<div id="modelo-jukescantor-jc-1969" class="section level4 hasAnchor" number="11.4.2.2">
-<h4><span class="header-section-number">11.4.2.2</span> Modelo Jukes/Cantor (JC) 1969<a href="softwares-para-análises-filogenéticas.html#modelo-jukescantor-jc-1969" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<ul>
-<li>Assume que as bases ocorrem com igual frequência e a taxa de substituição de uma base para qualquer outra é a mesma.</li>
-</ul>
-<p><img src="images/jukesCantor.png" /></p>
-</div>
-<div id="modelo-kimura-k80-1980" class="section level4 hasAnchor" number="11.4.2.3">
-<h4><span class="header-section-number">11.4.2.3</span> Modelo Kimura (K80) 1980<a href="softwares-para-análises-filogenéticas.html#modelo-kimura-k80-1980" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<ul>
-<li><p>Referido como “modelo de dois parâmetros de Kimura”</p></li>
-<li><p>Assume frequências distintas para transições e transversões</p></li>
-</ul>
-</div>
-<div id="modelo-hasegawa-kishino-yano-hky-1985" class="section level4 hasAnchor" number="11.4.2.4">
-<h4><span class="header-section-number">11.4.2.4</span> Modelo Hasegawa-Kishino-Yano (HKY) 1985<a href="softwares-para-análises-filogenéticas.html#modelo-hasegawa-kishino-yano-hky-1985" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<ul>
-<li>Distingue entre a taxa de transições e transversões (usando o parâmetro κ), e permite frequências de base desiguais.</li>
-</ul>
-</div>
-<div id="modelo-general-time-reversible-hky-1986" class="section level4 hasAnchor" number="11.4.2.5">
-<h4><span class="header-section-number">11.4.2.5</span> Modelo General Time Reversible (HKY) 1986<a href="softwares-para-análises-filogenéticas.html#modelo-general-time-reversible-hky-1986" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<ul>
-<li><p>Modelo de substituição mais utilizado.</p></li>
-<li><p>Modelo mais neutro, independente, de sítios finitos e reversível no tempo</p></li>
-<li><p>Todos seis tipos de substituição têm taxas diferentes</p></li>
-</ul>
-</div>
-<div id="prática-2-modelo-de-substituição" class="section level4 hasAnchor" number="11.4.2.6">
-<h4><span class="header-section-number">11.4.2.6</span> Prática 2: Modelo de substituição<a href="softwares-para-análises-filogenéticas.html#prática-2-modelo-de-substituição" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="prática-2-modelo-de-substituição" class="section level3 hasAnchor" number="11.4.2">
+<h3><span class="header-section-number">11.4.2</span> Prática 2: Modelo de substituição<a href="softwares-para-análises-filogenéticas.html#prática-2-modelo-de-substituição" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li>Para configurar o modelo GTR+G, use:</li>
 </ul>
@@ -745,8 +671,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li>O salto reversível não está configurado atualmente para diferentes modelos de variação de taxa entre sítios.</li>
 </ul>
 </div>
-<div id="prática-3-gerando-o-output" class="section level4 hasAnchor" number="11.4.2.7">
-<h4><span class="header-section-number">11.4.2.7</span> Prática 3: Gerando o output<a href="softwares-para-análises-filogenéticas.html#prática-3-gerando-o-output" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="prática-3-gerando-o-output" class="section level3 hasAnchor" number="11.4.3">
+<h3><span class="header-section-number">11.4.3</span> Prática 3: Gerando o output<a href="softwares-para-análises-filogenéticas.html#prática-3-gerando-o-output" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li><p>Depois de executar uma análise MCMC no MrBayes, certifique-se de que as cadeias de Markov convergiram através do software Tracer.</p></li>
 <li><p>Exclua as amostras influenciadas pelo ponto de partida de uma análise MCMC através de um processo conhecido como descarte do <em>burn-in</em>.</p></li>
@@ -761,10 +687,19 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </div>
+<div id="softwares-para-seleção-de-modelos-evolutivos" class="section level2 hasAnchor" number="11.5">
+<h2><span class="header-section-number">11.5</span> Softwares para seleção de modelos evolutivos<a href="softwares-para-análises-filogenéticas.html#softwares-para-seleção-de-modelos-evolutivos" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 </div>
-<div id="raxmlgui-2.0-jmodeltest-2" class="section level2 hasAnchor" number="11.5">
-<h2><span class="header-section-number">11.5</span> raxmlGUI 2.0 + jModelTest 2<a href="softwares-para-análises-filogenéticas.html#raxmlgui-2.0-jmodeltest-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="raxmlgui-2.0-jmodeltest-2" class="section level2 hasAnchor" number="11.6">
+<h2><span class="header-section-number">11.6</span> raxmlGUI 2.0 + jModelTest 2<a href="softwares-para-análises-filogenéticas.html#raxmlgui-2.0-jmodeltest-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><a href="https://antonellilab.github.io/raxmlGUI/">https://antonellilab.github.io/raxmlGUI/</a></p>
+<div id="partitionfinder" class="section level3 hasAnchor" number="11.6.1">
+<h3><span class="header-section-number">11.6.1</span> PartitionFinder<a href="softwares-para-análises-filogenéticas.html#partitionfinder" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>PartitionFinder
+<img src="images/PartitionFinder.PNG" />
+Os principais resultados são gravados no arquivo
+<code>best_scheme.txt</code>.</p>
+</div>
 </div>
 </div>
             </section>
@@ -772,7 +707,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="seleção-de-modelos-das-partições.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="modelos-de-evolução-de-sequências.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="edição-final-de-árvore.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
