--- a/modelos-de-evolução-de-sequências.html
+++ b/modelos-de-evolução-de-sequências.html
@@ -240,13 +240,11 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="10" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html"><i class="fa fa-check"></i><b>10</b> Modelos de evolução de sequências</a>
 <ul>
-<li class="chapter" data-level="10.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#as-6-substituições"><i class="fa fa-check"></i><b>10.1</b> As 6 substituições</a>
-<ul>
-<li class="chapter" data-level="10.1.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-jukescantor-jc-1969"><i class="fa fa-check"></i><b>10.1.1</b> Modelo Jukes/Cantor (JC) 1969</a></li>
-<li class="chapter" data-level="10.1.2" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-kimura-k80-1980"><i class="fa fa-check"></i><b>10.1.2</b> Modelo Kimura (K80) 1980</a></li>
-<li class="chapter" data-level="10.1.3" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-hasegawa-kishino-yano-hky-1985"><i class="fa fa-check"></i><b>10.1.3</b> Modelo Hasegawa-Kishino-Yano (HKY) 1985</a></li>
-<li class="chapter" data-level="10.1.4" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-general-time-reversible-hky-1986"><i class="fa fa-check"></i><b>10.1.4</b> Modelo General Time Reversible (HKY) 1986</a></li>
-</ul></li>
+<li class="chapter" data-level="10.1" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#as-6-substituições"><i class="fa fa-check"></i><b>10.1</b> As 6 substituições</a></li>
+<li class="chapter" data-level="10.2" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-jukescantor-jc-1969"><i class="fa fa-check"></i><b>10.2</b> Modelo Jukes/Cantor (JC) 1969</a></li>
+<li class="chapter" data-level="10.3" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-kimura-k80-1980"><i class="fa fa-check"></i><b>10.3</b> Modelo Kimura (K80) 1980</a></li>
+<li class="chapter" data-level="10.4" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-hasegawa-kishino-yano-hky-1985"><i class="fa fa-check"></i><b>10.4</b> Modelo Hasegawa-Kishino-Yano (HKY) 1985</a></li>
+<li class="chapter" data-level="10.5" data-path="modelos-de-evolução-de-sequências.html"><a href="modelos-de-evolução-de-sequências.html#modelo-general-time-reversible-hky-1986"><i class="fa fa-check"></i><b>10.5</b> Modelo General Time Reversible (HKY) 1986</a></li>
 </ul></li>
 <li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
 <ul>
@@ -399,26 +397,6 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="modelos-de-evolução-de-sequências" class="section level1 hasAnchor" number="10">
 <h1><span class="header-section-number">10</span> Modelos de evolução de sequências<a href="modelos-de-evolução-de-sequências.html#modelos-de-evolução-de-sequências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<ul>
-<li><p>Para especificação do modelo evolutivo, use o comando <code>lset</code></p></li>
-<li><p>Os parâmetros de modelo mais utilizads são:</p>
-<ol style="list-style-type: decimal">
-<li>número de tipos de substituição</li>
-</ol>
-<ul>
-<li><strong>1</strong> = Jukes-Cantor</li>
-<li><strong>2</strong> = HKY</li>
-<li><strong>6</strong> = GTR</li>
-</ul>
-<ol start="2" style="list-style-type: decimal">
-<li>modelo de variação de taxa entre sítios (<em>sites</em>)</li>
-</ol>
-<ul>
-<li><strong>I</strong> = Taxas de sítios invariáveis</li>
-<li><strong>G</strong> = Taxas de distribuição gama entre os sítios</li>
-<li><strong>I+G</strong> = Combinação</li>
-</ul></li>
-</ul>
 <div id="as-6-substituições" class="section level2 hasAnchor" number="10.1">
 <h2><span class="header-section-number">10.1</span> As 6 substituições<a href="modelos-de-evolução-de-sequências.html#as-6-substituições" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="images/six_subst.png" /></p>
@@ -447,34 +425,34 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 </ul></li>
 </ul>
-<div id="modelo-jukescantor-jc-1969" class="section level3 hasAnchor" number="10.1.1">
-<h3><span class="header-section-number">10.1.1</span> Modelo Jukes/Cantor (JC) 1969<a href="modelos-de-evolução-de-sequências.html#modelo-jukescantor-jc-1969" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+</div>
+<div id="modelo-jukescantor-jc-1969" class="section level2 hasAnchor" number="10.2">
+<h2><span class="header-section-number">10.2</span> Modelo Jukes/Cantor (JC) 1969<a href="modelos-de-evolução-de-sequências.html#modelo-jukescantor-jc-1969" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>Assume que as bases ocorrem com igual frequência e a taxa de substituição de uma base para qualquer outra é a mesma.</li>
 </ul>
 <p><img src="images/jukesCantor.png" /></p>
 </div>
-<div id="modelo-kimura-k80-1980" class="section level3 hasAnchor" number="10.1.2">
-<h3><span class="header-section-number">10.1.2</span> Modelo Kimura (K80) 1980<a href="modelos-de-evolução-de-sequências.html#modelo-kimura-k80-1980" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="modelo-kimura-k80-1980" class="section level2 hasAnchor" number="10.3">
+<h2><span class="header-section-number">10.3</span> Modelo Kimura (K80) 1980<a href="modelos-de-evolução-de-sequências.html#modelo-kimura-k80-1980" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li><p>Referido como “modelo de dois parâmetros de Kimura”</p></li>
 <li><p>Assume frequências distintas para transições e transversões</p></li>
 </ul>
 </div>
-<div id="modelo-hasegawa-kishino-yano-hky-1985" class="section level3 hasAnchor" number="10.1.3">
-<h3><span class="header-section-number">10.1.3</span> Modelo Hasegawa-Kishino-Yano (HKY) 1985<a href="modelos-de-evolução-de-sequências.html#modelo-hasegawa-kishino-yano-hky-1985" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="modelo-hasegawa-kishino-yano-hky-1985" class="section level2 hasAnchor" number="10.4">
+<h2><span class="header-section-number">10.4</span> Modelo Hasegawa-Kishino-Yano (HKY) 1985<a href="modelos-de-evolução-de-sequências.html#modelo-hasegawa-kishino-yano-hky-1985" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>Distingue entre a taxa de transições e transversões (usando o parâmetro κ), e permite frequências de base desiguais.</li>
 </ul>
 </div>
-<div id="modelo-general-time-reversible-hky-1986" class="section level3 hasAnchor" number="10.1.4">
-<h3><span class="header-section-number">10.1.4</span> Modelo General Time Reversible (HKY) 1986<a href="modelos-de-evolução-de-sequências.html#modelo-general-time-reversible-hky-1986" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="modelo-general-time-reversible-hky-1986" class="section level2 hasAnchor" number="10.5">
+<h2><span class="header-section-number">10.5</span> Modelo General Time Reversible (HKY) 1986<a href="modelos-de-evolução-de-sequências.html#modelo-general-time-reversible-hky-1986" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li><p>Modelo de substituição mais utilizado.</p></li>
 <li><p>Modelo mais neutro, independente, de sítios finitos e reversível no tempo</p></li>
 <li><p>Todos seis tipos de substituição têm taxas diferentes</p></li>
 </ul>
-</div>
 </div>
 </div>
             </section>
