--- a/softwares-para-análises-filogenéticas.html
+++ b/softwares-para-análises-filogenéticas.html
@@ -510,6 +510,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <p><code>iqtree -s example.phy -alrt 10000 -bb 10000 -lbp 10000 -abayes</code></p>
 </blockquote>
 </div>
+<p><br></p>
+<p>Exemplo com dados particionados (matriz combinada)</p>
 <div style="color: black; background: lightblue; text-align: justify; border: 5px outset lightgray; padding: 10px;">
 <p>Arquivo input</p>
 <blockquote>
